--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -3,3 +3,4 @@
 %input.btn.btn-primary{:type => "button", :value => "Input"}/
 %input.btn.btn-primary{:type => "submit", :value => "Submit"}/
 %input.btn.btn-primary{:type => "reset", :value => "Reset"}/
+ssss
